--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>HELLO FROM YELPCAMP HERE</h1>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <title>title</title>
+  </head>
+  <body>
+    
+    <h1> WELCOME TO THE CAMPS
+
+      <li> <%= campgrounds.title %></li>
+      <li> <%= campgrounds.location %>  </li>
+    </h1>
+  
+   <footer>
+
+   <a href="/campgrounds/<%= campgrounds._id %>/edit">
+   Edit the campgrounds
+   </a>
+   <form action="/campgrounds/<%= campgrounds._id %>?_method=DELETE" method="POST">
+    <button> Delete</button>
+  </form>
+   <a href="/campgrounds">
+    All campgrounds
+   </a>
+    
+   </footer>
+  </body>
 </html>
