--- a/views/home.ejs
+++ b/views/home.ejs
@@ -68,6 +68,9 @@
         <div class="card-body">
           <h5 class="card-title">Rating: <%= review.rating %></h5>
           <p class="card-text">Review: <%= review.body %></p>
+          <form action="/campgrounds/<%= campgrounds._id %>/reviews/<%= review._id %>?_method=DELETE" method="POST">
+          <button class="btn btn-danger">Delete the review</button>
+          </form>
         </div>
       </div>
     <% } %>
