--- a/views/new.ejs
+++ b/views/new.ejs
@@ -8,7 +8,7 @@
       <div class="mb-3">
         <label class="form-label" form="title"> Enter the title:  </label>
         <input class="form-control" type="text" id="title" name="campgrounds[title]" required/>
-        <div class="valid-feedback">
+        <div class="valid-feedback"> 
           Looks good!
         </div>
     </div>
@@ -19,8 +19,14 @@
           Looks good!
         </div>
       </div>
-  <input type="file" name="image" id="" multiple>
+        <div class="mb-3">
+           <div class="input-group mb-3 custom-file">
+        <input type="file" class="form-control" id="inputGroupFile02" name="image" multiple>
+        <label class="input-group-text custom-file-label" for="image">Upload image</label>
+      </div>
+        </div>
 
+     
       <!-- <div class="mb-3">
         <label class="form-label" for="image">Image Url</label>
         <input class="form-control" type="text" id="location" name="campgrounds[image]" required/>
