--- a/views/Layouts/boilerplates.ejs
+++ b/views/Layouts/boilerplates.ejs
@@ -13,7 +13,7 @@
     <title>BOILER PLATES</title>
   </head>
 
-  <body class="d-flex flex-column vh-100">
+  <body class="d-flex flex-column vh-100" style="background-color: rgb(255, 255, 255);">
     <%- include("../Partials/navbar.ejs") %>
 
     <main class="container mt-5">  <%- include("../Partials/flashes.ejs") %>
@@ -30,7 +30,7 @@
       integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
       crossorigin="anonymous">
   </script>
-<script src="https://cdn.jsdelivr.net/npm/bs-custom-file-input/dist/bs-custom-file-input.min.js">
+<script src="https://cdn.jsdelivr.net/npm/bs-custom-file-input/dist/bs-custom-file-input.min.js" crossorigin="anonymous">
 
   
 </script>
