--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,7 @@
 <%- layout("./Layouts/boilerplates") %>
+<div id="map" style="width: 100%; height: 500px;">
+  
+</div>
 <h1>ALL CAMPS HERE</h1>
 <a href="/campgrounds/new"> Add a campground</a>
 <% for(let campground of campgrounds) {%>
@@ -6,14 +9,15 @@
   <div class="row">
     <div class="col-md-4">
       <% if(campground.image.length) {%>
-      <img class="img-fluid" src="<%= campground.image[0].url %>" />
+      <img class="img-fluid" crossorigin="anonymous" src="<%= campground.image[0].url %>" />
       <% } else {%>
-        <img class="img-fluid" src="https://res.cloudinary.com/dtsmrrabz/image/upload/v1728130267/Yelpcamp/pjkf1gdpa9mxndoncgs2.jpg" />
+        <img class="img-fluid" crossorigin="anonymous" src="https://res.cloudinary.com/dtsmrrabz/image/upload/v1728130267/Yelpcamp/pjkf1gdpa9mxndoncgs2.jpg" />
         <% } %>
     </div>
     <div class="col-md-8">
       <div class="card-body">
         <h5 class="card-title"><%= campground.title %></h5>
+        <h5 class="card-title"><%= campground.properties.popUpMarkUp %></h5>
         <p class="card-text"><%= campground.description %></p>
         <p class="card-text">
           <small class="text-muted"> <%= campground.location %> </small>
@@ -24,3 +28,11 @@
   </div>
 </div>
 <%}%>
+<script>
+  const maptilerApiKey = '<%- process.env.MAPTILER_API_KEY %>';
+  const campgrounds = { features: <%- JSON.stringify(campgrounds) %>}
+
+</script>
+<script src="/javascripts/clusterMap.js">
+  
+</script>
